# CS_Bachelor_Projects

./: .gitignore  README.md
Advanced Database Programming/: DBQuery.txt  TaylorShipley3550A5 Redo.sql  TaylorShipleyCS3550A10a.sql  TaylorShipleyCS3550A10b.sql  TaylorShipleyCS3550A12.sql  TaylorShipleyCS3550A14.js  TaylorShipleyCS3550A15.js  TaylorShipleyCS3550A4.txt  TaylorShipleyCS3550A5.sql  TaylorShipleyCS3550A6.sql  TaylorShipleyCS3550A7.sql  TaylorShipleyCS3550A8.sql  TaylorShipleyCS3550A9.sql
Data Structures and Algorithms/: BSTConsole.java  BSTDemo.java  BSTNode-1.java  BSTNode.java  BinarySearch.java  BinarySearchTree-1.java  BinarySearchTree.java  BubbleSort.java  GenRandAccounts.java  HashNode.java  HashingDemo1.java  InsertionSort.java  LinearSearch.java  LinkedList.java  LinkedListDemo1.java  Node.java  PlayerLinkedList.java  PlayerNode.java  PlayerType.java  ReadDelimited.java  SelectionSort.java  Week2Part1.java  Week2Part2.java
Database Design & Application/: COLONIAL_A8_SCRIPT.txt  COLONIAL_Data.txt  ScriptFile_forBuildingTALDatabase_Notepad copy.txt  ScriptFile_forBuildingTALDatabase_Notepad.txt  Shipley_Taylor_A6_COLONIAL.txt  Shipley_Taylor_Ch3COLONIAL attempt 1.txt  Shipley_Taylor_Ch3COLONIAL.txt  Shipley_Taylor_Ch3TAL.txt  Shipley_Taylor_Ch4COLONIAL.txt  Shipley_Taylor_Ch4TAL.txt  Shipley_Taylor_Ch5COLONIAL.txt  Shipley_Taylor_Ch5TAL.txt  Shipley_Taylor_Ch6TAL.txt  TAL_A5_Script.txt  TAL_A7_Script.txt  TAL_A9_Script.txt  Tal_A5.sql
Foundations of Computer Science/: Assignment2.sql  Program 1.java  Program II.java  Project2Lab.java  Query1.sql  Query2.sql  Query3.sql  Web Design 1.html
Fundamentals of Programming/: Account.java  AccountTest.java  Ball.java  BallApp.java  Continent.java  Conveyor.java  ConveyorApp.java  Country-1.java  Country.java  CountryTest.java  Dice.java  Employee.java  EmployeeTest.java  Lab Time Table.java  LabArraysClass.java  LabMarbles.java  LabRandom.java  LabVariables.java  Main-1.java  Main-2.java  Main-4.java  Main-5.java  Main-6.java  Main-7.java  Main.java  Martian-1.java  Martian-2.java  Martian.java  MartiansApp-1.java  (+19 more)
Software Engineering 3/group3/: CMakeLists.txt  NewProject.jucer
Software Engineering 3/group3/NewProject/: CMakeLists.txt
Software Engineering 3/group3/Source/: ADSRGui.cpp  ADSRGui.h  CMakeLists.txt  FilterGui.cpp  FilterGui.h  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Synth.cpp  Synth.h  Utils.h  Voice.h
Software Engineering 3/group3/Source/Tests/: SynthTest.cpp  SynthTest.h
(+425 files in other folders)
